--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@
 .Rproj.user
 
 # Report figures
-analysis/figure*
+reports/figure*
 
 # Core latex/pdflatex auxiliary files:
 *.tex		
@@ -31,7 +31,7 @@ analysis/figure*
 # these rules might exclude image files for figures etc.
 # *.ps
 # *.eps
-# *.pdf
+*.pdf
 
 ## Bibliography auxiliary files (bibtex/biblatex/biber):
 *.bbl
